--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
+/* Global styles */
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #666666;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+a,
+a:visited {
+  color: #666666;
+}
+
+.clear {
+  clear: both;
+}
+
+td {
+  border-top: solid 1px #d3d3d3;
+}
+
+td,
+th {
+  padding: 10px;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+/* Documentation site component styles */
+.example {
+  border: solid 1px #d3d3d3;
+  padding: 16px;
+  margin-bottom: 16px;
+  background-color: #f4f6f9;
+}
+
+.example h4:first-of-type {
+  margin-top: 0;
+}
+
+.example p:last-of-type {
+  margin-bottom: 0;
+}
+
+.props tr td:last-of-type {
+  text-align: center;
+}
+
+.props th,
+td {
+  text-align: left;
+  padding: 5px;
+}
+
+.navigation {
+  float: left;
+  width: 250px;
+  list-style-type: none;
+  padding: 0;
+}
+
+.componentpage {
+  margin-left: 275px;
 }
